快速构建原型完成，顺带测试Commit命令

--- a/Swift Weather/Swift Weather/Base.lproj/Main.storyboard
+++ b/Swift Weather/Swift Weather/Base.lproj/Main.storyboard
@@ -8,20 +8,72 @@
         <!--View Controller-->
         <scene sceneID="OFC-Nj-xCK">
             <objects>
-                <viewController id="52W-0P-Ptg" sceneMemberID="viewController">
+                <viewController id="52W-0P-Ptg" customClass="ViewController" customModule="Swift_Weather" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="fGH-VJ-jLC"/>
                         <viewControllerLayoutGuide type="bottom" id="swG-ah-3UG"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ylt-Dc-WAC">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="北京" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gCQ-Ry-RF0">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="60" y="80" width="280" height="44"/>
+                                </variation>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Weather_backupground.png" translatesAutoresizingMaskIntoConstraints="NO" id="DNk-oo-xhC">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <animations/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="125" y="155" width="150" height="150"/>
+                                </variation>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="17.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gI3-l5-lGc">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="65"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="60" y="335" width="280" height="120"/>
+                                </variation>
+                            </label>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" red="0.3705157556" green="0.83138262299999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="gCQ-Ry-RF0"/>
+                                <exclude reference="DNk-oo-xhC"/>
+                                <exclude reference="gI3-l5-lGc"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="gCQ-Ry-RF0"/>
+                                <include reference="DNk-oo-xhC"/>
+                                <include reference="gI3-l5-lGc"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="imageWeather" destination="DNk-oo-xhC" id="DGw-Iu-ozO"/>
+                        <outlet property="location" destination="gCQ-Ry-RF0" id="aQR-Fv-TY6"/>
+                        <outlet property="temperature" destination="gI3-l5-lGc" id="6PG-Eu-mMF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tv3-B8-FIV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="105" y="263"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Weather_backupground.png" width="512" height="512"/>
+    </resources>
 </document>
