--- a/Swift Weather/Swift Weather/Base.lproj/Main.storyboard
+++ b/Swift Weather/Swift Weather/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                     <rect key="frame" x="60" y="80" width="280" height="44"/>
                                 </variation>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Weather_backupground.png" translatesAutoresizingMaskIntoConstraints="NO" id="DNk-oo-xhC">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloudy2.png" translatesAutoresizingMaskIntoConstraints="NO" id="DNk-oo-xhC">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <animations/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
@@ -74,6 +74,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Weather_backupground.png" width="512" height="512"/>
+        <image name="cloudy2.png" width="128" height="128"/>
     </resources>
 </document>
