--- a/Swift Weather/Swift Weather/Base.lproj/Main.storyboard
+++ b/Swift Weather/Swift Weather/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="北京" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gCQ-Ry-RF0">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gCQ-Ry-RF0">
                                 <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
@@ -27,14 +27,14 @@
                                     <rect key="frame" x="60" y="80" width="280" height="44"/>
                                 </variation>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloudy2.png" translatesAutoresizingMaskIntoConstraints="NO" id="DNk-oo-xhC">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DNk-oo-xhC">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <animations/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="125" y="155" width="150" height="150"/>
                                 </variation>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="17.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gI3-l5-lGc">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gI3-l5-lGc">
                                 <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="65"/>
@@ -42,6 +42,23 @@
                                 <nil key="highlightedColor"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="60" y="335" width="280" height="120"/>
+                                </variation>
+                            </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="8i8-wg-c5L">
+                                <rect key="frame" x="-10" y="-10" width="20" height="20"/>
+                                <animations/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="190" y="127" width="20" height="20"/>
+                                </variation>
+                            </activityIndicatorView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="努力加载中..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i3K-d4-721">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="60" y="301" width="280" height="44"/>
                                 </variation>
                             </label>
                         </subviews>
@@ -52,6 +69,8 @@
                                 <exclude reference="gCQ-Ry-RF0"/>
                                 <exclude reference="DNk-oo-xhC"/>
                                 <exclude reference="gI3-l5-lGc"/>
+                                <exclude reference="8i8-wg-c5L"/>
+                                <exclude reference="i3K-d4-721"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -59,11 +78,15 @@
                                 <include reference="gCQ-Ry-RF0"/>
                                 <include reference="DNk-oo-xhC"/>
                                 <include reference="gI3-l5-lGc"/>
+                                <include reference="8i8-wg-c5L"/>
+                                <include reference="i3K-d4-721"/>
                             </mask>
                         </variation>
                     </view>
                     <connections>
                         <outlet property="imageWeather" destination="DNk-oo-xhC" id="DGw-Iu-ozO"/>
+                        <outlet property="loading" destination="i3K-d4-721" id="mFb-l2-Zaw"/>
+                        <outlet property="loadingIndicator" destination="8i8-wg-c5L" id="wre-7t-Nv7"/>
                         <outlet property="location" destination="gCQ-Ry-RF0" id="aQR-Fv-TY6"/>
                         <outlet property="temperature" destination="gI3-l5-lGc" id="6PG-Eu-mMF"/>
                     </connections>
@@ -73,7 +96,4 @@
             <point key="canvasLocation" x="105" y="263"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="cloudy2.png" width="128" height="128"/>
-    </resources>
 </document>
